--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,5 +16,5 @@ phases:
   post_build:
     commands:
       - echo "Updating lambda Function..."
-      - aws lambda update-function-code --function-name aylien-new-features-test --zip-file fileb://deployment_package.zip
+      - aws lambda update-function-code --function-name aylien-test --zip-file fileb://deployment_package.zip
       - echo "DONE!!"
